# csv-runner

./: CMakeLists.txt  README.md  install.sh  uninstall.sh
examples/: sample.csv
src/: csvrunner.cpp  csvrunner.h  metadata.json
